# pytorch-posthoc-ema

./: .cursorrules  .gitignore  MINIMIZE_RAM.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
notebooks/: calculate_beta.py  visualize_error.py
notes/: MINIMIZE_RAM_LEARNED.md  research_article.md
posthoc_ema/: __init__.py  ema_pytorch.py  karras_ema.py  posthoc_ema.py  utils.py  visualization.py
tests/: lucidrains_posthoc_ema_reference.py  test_beta_sigma_rel.py  test_different_sigma_rels.py  test_inference_tensor_issue.py  test_large_sigma_rel.py  test_practical.py  test_reference_practical.py  test_same_as_reference.py  test_training_scenario.py  test_usage.py  test_visualization.py  test_vram_usage.py
