[tool.poetry]
name = "pytorch-post-hoc-ema"
version = "0.1.0"
description = ""
authors = ["Phil Wang <lucidrains@gmail.com>, Richard Löwenström <samedii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
eval-type-backport = { version = "*", python = "<3.10" }
torch = "^2.0.0"
numpy = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
autoflake = "^1.6.1"
pytest = "^6.1.2"
ruff = "^0.7.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
